--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -379,267 +379,68 @@ ul#nav li.current a { color: #fe6928; }
 
 #portfolio {
   background: #fff;
-  padding-top: 90px;
-  padding-bottom: 60px;
+  padding-top: 30px;
+  padding-bottom: 50px;
 }
 
-#portfolio h1 {
-  font: 15px/24px 'opensans-semibold', sans-serif;
-  text-transform: uppercase;
-  letter-spacing: 1px;
+.portfolio h2 {
+  font-size: 42px 'opensans-bold', sans-serif;
+  font-weight: 700;
+  margin: 25px auto;
   text-align: center;
-  margin-bottom: 48px;
-  color: #95A3A3;
 }
 
-/* Portfolio Content */
-#portfolio-wrapper .columns {
-  margin-bottom: 36px;
+.portfolio__cards {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 
-.portfolio-item .item-wrap {
-  background: #fff;
-  overflow: hidden;
-  position: relative;
-
-  -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  -ms-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
+.portfolio__card {
+  max-width: 370px;
+  max-height: 390px;
+  padding: 10px;
+  border: 1px solid #e96b56;
+  border-radius: 18px;
 }
 
-.portfolio-item .item-wrap a {
-  display: block;
-  cursor: pointer;
+.portfolio__card h5 {
+  font-size: 20px;
+  font-weight: 200;
+  margin-bottom: 10px;
 }
 
-/* overlay */
-.portfolio-item .item-wrap .overlay {
-  position: absolute;
-  left: 0;
-  top: 0;
+.portfolio__card p {
+  font-size: 13px;
+  margin: 0px 0;
+  line-height: 20px;
+  color: #737373;
+}
+
+.portfolio__card img {
   width: 100%;
-  height: 100%;
-
-  opacity: 0;
-  -moz-opacity: 0;
-  filter: alpha(opacity=0);
-
-  -webkit-transition: opacity 0.3s ease-in-out;
-  -moz-transition: opacity 0.3s ease-in-out;
-  -o-transition: opacity 0.3s ease-in-out;
-  transition: opacity 0.3s ease-in-out;
-
-  background: url(../images/overlay-bg.png) repeat;
+  height: auto;
+  margin: 0px 0 5px;
+  border-radius: 8px;
 }
 
-.portfolio-item .item-wrap .link-icon {
-  display: block;
-  color: #fff;
-  height: 30px;
-  width: 30px;
-  font-size: 18px;
-  line-height: 30px;
-  text-align: center;
-
-  opacity: 0;
-  -moz-opacity: 0;
-  filter: alpha(opacity=0);
-
-  -webkit-transition: opacity 0.3s ease-in-out;
-  -moz-transition: opacity 0.3s ease-in-out;
-  -o-transition: opacity 0.3s ease-in-out;
-  transition: opacity 0.3s ease-in-out;
-
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-left: -15px;
-  margin-top: -15px;
-}
-
-.portfolio-item .item-wrap img {
-  vertical-align: bottom;
-}
-
-.portfolio-item .portfolio-item-meta {
-  padding: 18px
-}
-
-.portfolio-item .portfolio-item-meta h5 {
-  font: 14px/21px 'opensans-bold', sans-serif;
-  color: #fff;
-}
-
-.portfolio-item .portfolio-item-meta p {
-  font: 12px/18px 'opensans-light', sans-serif;
-  color: #c6c7c7;
-  margin-bottom: 0;
-}
-
-/* on hover */
-.portfolio-item:hover .overlay {
-  opacity: 1;
-  -moz-opacity: 1;
-  filter: alpha(opacity=100);
-}
-
-.portfolio-item:hover .link-icon {
-  opacity: 1;
-  -moz-opacity: 1;
-  filter: alpha(opacity=100);
-}
-
-/* popup modal */
-.popup-modal {
-  max-width: 550px;
-  background: #fff;
-  position: relative;
-  margin: 0 auto;
-}
-
-.popup-modal .description-box {
-  padding: 12px 36px 18px 36px;
-}
-
-.popup-modal .description-box h4 {
-  font: 15px/24px 'opensans-bold', sans-serif;
-  margin-bottom: 12px;
-  color: #111;
-}
-
-.popup-modal .description-box p {
-  font: 14px/24px 'opensans-regular', sans-serif;
-  color: #A1A1A1;
-  margin-bottom: 12px;
-}
-
-.popup-modal .description-box .categories {
-  font: 11px/21px 'opensans-light', sans-serif;
-  color: #A1A1A1;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  display: block;
-  text-align: left;
-}
-
-.popup-modal .description-box .categories i {
-  margin-right: 8px;
-}
-
-.popup-modal .link-box {
-  padding: 18px 36px;
-  background: #111;
-  text-align: left;
-}
-
-.popup-modal .link-box a {
-  color: #fff;
-  font: 11px/21px 'opensans-bold', sans-serif;
-  text-transform: uppercase;
-  letter-spacing: 3px;
+.portfolio__card .button {
+  margin: 1px 1px 0;
+  border-radius: 15px;
+  background: #e96b56;
+  display: inline-block;
+  padding: 5px 15px;
+  font-size: 13px;
+  font-weight: 700;
   cursor: pointer;
+  transition: all 250ms ease;
 }
 
-.popup-modal a:hover {
-  color: #00CCCC;
-}
-
-.popup-modal a.popup-modal-dismiss {
-  margin-left: 24px;
-}
-
-
-/* fadein/fadeout effect for modal popup
-/* ------------------------------------------------------------------ */
-
-/* content at start */
-.mfp-fade.mfp-wrap .mfp-content .popup-modal {
-  opacity: 0;
-  -webkit-transition: all 200ms ease-in-out;
-  -moz-transition: all 200ms ease-in-out;
-  -o-transition: all 200ms ease-in-out;
-  -ms-transition: all 200ms ease-in-out;
-  transition: all 200ms ease-in-out;
-}
-
-/* content fadein */
-.mfp-fade.mfp-wrap.mfp-ready .mfp-content .popup-modal {
-  opacity: 1;
-}
-
-/* content fadeout */
-.mfp-fade.mfp-wrap.mfp-removing .mfp-content .popup-modal {
-  opacity: 0;
-}
-
-/* ------------------------------------------------------------------ */
-/* f. Call To Action Section
-/* ------------------------------------------------------------------ */
-
-#call-to-action {
-  background: #212121;
-  padding-top: 66px;
-  padding-bottom: 48px;
-}
-
-#call-to-action h1 {
-  font: 18px/24px 'opensans-bold', sans-serif;
-  text-transform: uppercase;
-  letter-spacing: 3px;
-  color: #fff;
-}
-
-#call-to-action h1 span {
-  display: none;
-}
-
-#call-to-action .header-col h1:before {
-  font-family: 'FontAwesome';
-  content: "\f0ac";
-  padding-right: 10px;
-  font-size: 72px;
-  line-height: 72px;
-  text-align: left;
-  float: left;
-  color: #fff;
-}
-
-#call-to-action .action {
-  margin-top: 12px;
-}
-
-#call-to-action h2 {
-  font: 28px/36px 'opensans-bold', sans-serif;
-  color: #EBEEEE;
-  margin-bottom: 6px;
-}
-
-#call-to-action h2 a {
-  color: inherit;
-}
-
-#call-to-action p {
-  color: #636363;
-  font-size: 17px;
-}
-
-/*#
-call-to-action .button {
-	color:#fff;
-   background: #0D0D0D;
-}
-*/
-#call-to-action .button:hover,
-#call-to-action .button:active {
-  background: #FFFFFF;
-  color: #0D0D0D;
-}
-
-#call-to-action p span {
-  font-family: 'opensans-semibold', sans-serif;
-  color: #D8D8D8;
+.button:hover {
+  background: #737373;
+  color: #FFFFFF;
 }
 
 /* ------------------------------------------------------------------ */
@@ -647,15 +448,15 @@ call-to-action .button {
 /* ------------------------------------------------------------------ */
 
 #contact {
-   background: #191919;
-   padding-top: 96px;
-   padding-bottom: 102px;
-   color: #636363;
+   background: #0f0f0f;
+   padding-top: 50px;
+   padding-bottom: 60px;
+   color: #ededed;
 }
-#contact .section-head { margin-bottom: 42px; }
+#contact .section-head { margin-bottom: 30px; }
 
-#contact a, #contact a:visited  { color: #0762f9; }
-#contact a:hover, #contact a:focus { color: #fff; }
+#contact a, #contact a:visited  { color: #e96b56; }
+#contact a:hover, #contact a:focus { color: #e96b56; }
 
 #contact h1 {
    font: 18px/24px 'opensans-bold', sans-serif;
@@ -666,10 +467,11 @@ call-to-action .button {
 }
 #contact h1 span { display: none; }
 #contact h1:before {
-   font-family: 'FontAwesome';
-   content: "\f0e0";
+  font-family: 'FontAwesome';
+  content: "\f0e0";
 	padding-right: 10px;
 	font-size: 72px;
+  font-weight: 700;
    line-height: 72px;
    text-align: left;
    float: left;
@@ -685,7 +487,7 @@ call-to-action .button {
    font: 18px/36px 'opensans-light', sans-serif;
    padding-right: 3%;
 }
-#contact .header-col { padding-top: 6px; }
+#contact .header-col { padding-top: 3px; }
 
 
 /* contact form */
@@ -696,14 +498,14 @@ call-to-action .button {
    color: #EBEEEE;
 	display: inline-block;
 	float: left;
-   width: 26%;
+  width: 26%;
 }
 #contact input,
 #contact textarea,
 #contact select {
    padding: 10px 20px;
 	color: #eee;
-	background: #373233;
+	background: #a6a6a6;
 	margin-bottom: 42px;
 	border: 0;
 	outline: none;
@@ -715,7 +517,7 @@ call-to-action .button {
 #contact textarea:focus,
 #contact select:focus {
 	color: #fff;
-	background-color: #0762f9;
+	background-color: #e96b56;
 }
 #contact button.submit {
 	text-transform: uppercase;
@@ -734,7 +536,7 @@ call-to-action .button {
 	background: #fff;
 }
 #contact span.required {
-	color: #0762f9;
+	color: #e96b56;
 	font-size: 13px;
 }
 #message-warning, #message-success {
@@ -758,26 +560,6 @@ call-to-action .button {
    left: 18px;
    top: 17px;
 }
-
-
-/* Twitter Feed */
-#twitter {
-   margin-top: 12px;
-   padding: 0;
-}
-#twitter li {
-   margin: 6px 0px 12px 0;
-   line-height: 30px;
-}
-#twitter li span {
-   display: block;
-}
-#twitter li b a {
-   font: 13px/36px 'opensans-regular', Sans-serif;
-   color: #474747 !important;
-   border: none;
-}
-
 
 /* ------------------------------------------------------------------ */
 /* i. Footer
@@ -809,12 +591,7 @@ footer .copyright li {
 .ie footer .copyright li {
    display: inline;
 }
-footer .copyright li:before {
-    content: "\2022";
-    padding-left: 10px;
-    padding-right: 10px;
-    color: #095153;
-}
+
 footer .copyright  li:first-child:before {
     display: none;
 }
@@ -861,7 +638,7 @@ footer .social-links li:first-child { margin-left: 0; }
    line-height: 60px;
  	border-radius: 100%;
 }
-#go-top a:hover { background-color: #0F9095; }
+#go-top a:hover { background-color: #F06000; }
 
 
 .social .btn:first-child{
