--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -198,17 +198,17 @@ ul#nav li.current a { color: #fe6928; }
 /* ------------------------------------------------------------------ */
 /* d. Resume Section
 /* ------------------------------------------------------------------ */
-#resume {
+#services {
   background: #ebeeee;
   padding-top: 50px;
   padding-bottom: 10px;
   overflow: hidden;
 }
 
-#resume a, #resume a:visited  { color: #ffffff; }
-#resume a:hover, #resume a:focus { color: #0762f9; }
+#services a, #services a:visited  { color: #ffffff; }
+#services a:hover, #services a:focus { color: #0762f9; }
 
-.resume h2 {
+.services h2 {
   font: px/30px 'opensans-bold', sans-serif;
   color: #0f0f0f;
   margin-bottom: 9px; 
@@ -216,14 +216,14 @@ ul#nav li.current a { color: #fe6928; }
   font-weight: 700;
 }
 
-.resume .icon-box {
+.services .icon-box {
   text-align: center;
   border: 1px solid #ededed;
   padding: 50px 20px;
   transition: all ease-in-out 0.3s;
 }
 
-.resume .icon-box .icon {
+.services .icon-box .icon {
   margin: 0 auto;
   width: 100px;
   height: 100px;
@@ -237,12 +237,12 @@ ul#nav li.current a { color: #fe6928; }
   transform-style: preserve-3d;
 }
 
-.resume .icon-box .icon i {
+.services .icon-box .icon i {
   color: #fff;
   font-size: 38px;
 }
 
-.resume .icon-box .icon::before {
+.services .icon-box .icon::before {
   position: absolute;
   content: "";
   left: -8px;
@@ -255,39 +255,39 @@ ul#nav li.current a { color: #fe6928; }
   transform: translateZ(-1px);
 }
 
-.resume .icon-box h4 {
+.services .icon-box h4 {
   font-weight: 700;
   margin-bottom: 15px;
   font-size: 24px;
   color: #0f0f0f
 }
 
-.resume .icon-box p {
+.services .icon-box p {
   line-height: 24px;
   font-size: 15px;
   margin-bottom: 0;
   color: #0f0f0f;
 }
 
-.resume .icon-box:hover {
+.services .icon-box:hover {
   background: #e96b56;
   border-color: #e96b56;
 }
 
-.resume .icon-box:hover .icon {
+.services .icon-box:hover .icon {
   background: #fff;
 }
 
-.resume .icon-box:hover .icon i {
+.services .icon-box:hover .icon i {
   color: #e96b56;
 }
 
-.resume .icon-box:hover .icon::before {
+.services .icon-box:hover .icon::before {
   background: #ef9383;
 }
 
-.resume .icon-box:hover h4 a,
-.resume .icon-box:hover p {
+.services .icon-box:hover h4 a,
+.services .icon-box:hover p {
   color: #fff;
 }
 
@@ -381,20 +381,20 @@ ul#nav li.current a { color: #fe6928; }
 /* e. Portfolio Section
 /* ------------------------------------------------------------------ */
 
-#portfolio {
+#order {
   background: #fff;
   padding-top: 30px;
   padding-bottom: 50px;
 }
 
-.portfolio h2 {
+.order h2 {
   font-size: 42px 'opensans-bold', sans-serif;
   font-weight: 700;
   margin: 25px auto;
   text-align: center;
 }
 
-.portfolio__cards {
+.order__cards {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -402,7 +402,7 @@ ul#nav li.current a { color: #fe6928; }
   gap: 20px;
 }
 
-.portfolio__card {
+.order__card {
   max-width: 370px;
   max-height: 390px;
   padding: 10px;
@@ -410,27 +410,27 @@ ul#nav li.current a { color: #fe6928; }
   border-radius: 18px;
 }
 
-.portfolio__card h5 {
+.order__card h5 {
   font-size: 20px;
   font-weight: 200;
   margin-bottom: 10px;
 }
 
-.portfolio__card p {
+.order__card p {
   font-size: 13px;
   margin: 0px 0;
   line-height: 20px;
   color: #737373;
 }
 
-.portfolio__card img {
+.order__card img {
   width: 100%;
   height: auto;
   margin: 0px 0 5px;
   border-radius: 8px;
 }
 
-.portfolio__card .button {
+.order__card .button {
   margin: 1px 1px 0;
   border-radius: 15px;
   background: #e96b56;
